--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,12 +14,12 @@ jobs:
           opam repo add coq-released https://coq.inria.fr/opam/released
           opam repo add coq-extra-dev https://coq.inria.fr/opam/extra-dev
       - name: OPAM dependencies (Coq 8.11)
-        run: >
+        run: |
           opam install --yes coq.8.11.1
-                             coq-mathcomp-ssreflect.1.9.0
-                             coq-mathcomp-fingroup.1.9.0
-                             coq-mathcomp-algebra.1.9.0
-                             coq-void.0.1.0
-                             coq-extructures.dev
-                             coq-deriving.dev
-                             coq-quickchick.8.11.dev
+          opam install --yes coq-mathcomp-ssreflect.1.9.0
+          opam install --yes coq-mathcomp-fingroup.1.9.0
+          opam install --yes coq-mathcomp-algebra.1.9.0
+          opam install --yes coq-void.0.1.0
+          opam install --yes coq-extructures.dev
+          opam install --yes coq-deriving.dev
+          opam install --yes coq-quickchick.8.11.dev
